--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
 	<string name="some_action">General Settings</string>
+    <string name="maps_notification_listener_service">Maps Notification Listener Service</string>
 </resources>
